fix: :bug: Fixed layout issues in header

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -32,3 +32,17 @@
     @apply font-semibold;
   }
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.text-balance {
+  text-wrap: balance;
+}
